--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <div id = 'div_you_want_centered' style = 'margin:auto;'>
        <!-- <img src="image1.jpeg" alt="" id='image1'> -->
        <div class="" >
-         <button type="button" name="button"  onclick="window.location.href='/gothigh'";" style='height:100px;color:white;width:500px'>
+         <button type="button" name="button"  onclick="window.location.href='/gothigh'" style='height:100px;color:white;width:500px'>
            <a href="/gothigh" >I GOT HIGH</a>
          </button>
 
